--- a/src/layout/leftmenu.scss
+++ b/src/layout/leftmenu.scss
@@ -60,11 +60,15 @@
 
     .logo {
       display: block;
-      color: #12aa9c;
-      font-size: 1.8em;
-      text-align: center;
       margin: 1em auto 0.5em;
-      font-weight: bold;
+      font-size: 1.5em;
+      img {
+        display: block;
+        width: 3em;
+        height: 3em;
+        margin: 0 auto;
+        animation: bird 2s linear infinite alternate;
+      }
     }
 
     nav {
@@ -103,5 +107,14 @@
   }
   .menu-main {
     left: -10em;
+  }
+}
+
+@keyframes bird {
+  from {
+    transform: rotateZ(0);
+  }
+  to {
+    transform: rotateZ(30deg);
   }
 }
