--- a/src/ymui.scss
+++ b/src/ymui.scss
@@ -438,3 +438,46 @@ $color_list_deep: #fecc11f8df70 #f86b1d #f43e06 #7e1671 #0f59a4 #2c9678 #1772b4 
     clear: both;
   }
 }
+
+/** 提示框 **/
+.ym-tip-container {
+  position: fixed;
+  z-index: 9999;
+  padding: .3em .5em;
+  background-color: $basic_color;
+  color: #ffffff;
+  visibility: hidden;
+  span {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-width: 5px;
+    border-style: solid;
+  }
+  &.pos-left span {
+    border-width: 5px 0 5px 5px;
+    border-color: transparent transparent transparent $basic_color;
+    right: -5px;
+    top: 50%;
+    margin-top: -5px;
+  }
+  &.pos-right span {
+    border-width: 5px 5px 5px 0;
+    border-color: transparent $basic_color transparent transparent;
+    left: -5px;
+    top: 50%;
+    margin-top: -5px;
+  }
+  &.pos-up span {
+    border-width: 5px 5px 0 5px;
+    border-color: $basic_color transparent transparent transparent;
+    bottom: -5px;
+    left: .5em;
+  }
+  &.pos-bottom span {
+    border-width: 0 5px 5px 5px;
+    border-color: transparent transparent $basic_color transparent;
+    top: -5px;
+    left: .5em;
+  }
+}
