--- a/src/ymui.css
+++ b/src/ymui.css
@@ -449,3 +449,59 @@
     border-color: transparent transparent #45b787 transparent;
     top: -5px;
     left: .5em; }
+
+/**carousel**/
+.ym-carousel-container {
+  display: block;
+  overflow: hidden;
+  position: relative; }
+  .ym-carousel-container .ym-carousel {
+    display: flex;
+    flex-direction: row;
+    transition: left 1.5s ease-in-out;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0; }
+  .ym-carousel-container:hover .ym-carousel-point {
+    display: flex; }
+  .ym-carousel-container .ym-carousel-point {
+    position: absolute;
+    z-index: 2;
+    flex-direction: row;
+    bottom: 20px;
+    right: 20px;
+    display: none; }
+    .ym-carousel-container .ym-carousel-point li {
+      width: 10px;
+      height: 10px;
+      background-color: #ffffff;
+      margin: 0 5px;
+      cursor: pointer;
+      transition: background-color 1.5s ease-in-out; }
+      .ym-carousel-container .ym-carousel-point li.active {
+        background-color: #2c9678; }
+  .ym-carousel-container:hover .ym-carousel-btn {
+    display: block; }
+  .ym-carousel-container .ym-carousel-btn {
+    font-size: 150%;
+    position: absolute;
+    z-index: 2;
+    width: 2em;
+    height: 2em;
+    text-align: center;
+    line-height: 2em;
+    color: #ffffff;
+    background-color: #45b787;
+    opacity: .7;
+    top: 50%;
+    border-radius: 1em;
+    margin-top: -1em;
+    cursor: pointer;
+    display: none; }
+    .ym-carousel-container .ym-carousel-btn:hover {
+      opacity: 1; }
+    .ym-carousel-container .ym-carousel-btn.left {
+      left: 20px; }
+    .ym-carousel-container .ym-carousel-btn.right {
+      right: 20px; }
