--- a/src/ymui.css
+++ b/src/ymui.css
@@ -39,7 +39,7 @@
 .ym-btn-yellow {
   background-color: #f8df70; }
   .ym-btn-yellow:hover, .ym-btn-yellow.active {
-    background-color: #fecc11f8df70; }
+    background-color: #fecc11; }
 
 .color-yellow {
   color: #f8df70; }
@@ -463,7 +463,9 @@
     z-index: 1;
     left: 0;
     top: 0; }
-  .ym-carousel-container:hover .ym-carousel-point {
+  .ym-carousel-container .ym-carousel-point.hover-hide {
+    display: none; }
+  .ym-carousel-container:hover .ym-carousel-point.hover-hide {
     display: flex; }
   .ym-carousel-container .ym-carousel-point {
     position: absolute;
@@ -471,7 +473,7 @@
     flex-direction: row;
     bottom: 20px;
     right: 20px;
-    display: none; }
+    display: flex; }
     .ym-carousel-container .ym-carousel-point li {
       width: 10px;
       height: 10px;
@@ -481,24 +483,27 @@
       transition: background-color 1.5s ease-in-out; }
       .ym-carousel-container .ym-carousel-point li.active {
         background-color: #2c9678; }
-  .ym-carousel-container:hover .ym-carousel-btn {
+  .ym-carousel-container .ym-carousel-btn.hover-hide {
+    display: none; }
+  .ym-carousel-container:hover .ym-carousel-btn.hover-hide {
     display: block; }
   .ym-carousel-container .ym-carousel-btn {
-    font-size: 150%;
+    font-size: 200%;
     position: absolute;
     z-index: 2;
-    width: 2em;
-    height: 2em;
+    width: 1.6em;
+    height: 1.6em;
     text-align: center;
-    line-height: 2em;
+    line-height: 1.6em;
     color: #ffffff;
     background-color: #45b787;
     opacity: .7;
     top: 50%;
     border-radius: 1em;
-    margin-top: -1em;
+    margin-top: -.8em;
     cursor: pointer;
-    display: none; }
+    display: block;
+    font-weight: bold; }
     .ym-carousel-container .ym-carousel-btn:hover {
       opacity: 1; }
     .ym-carousel-container .ym-carousel-btn.left {
