--- a/src/ymui.scss
+++ b/src/ymui.scss
@@ -50,7 +50,7 @@ $basic_hover_color: #2c9678;
 
 $color_name: yellow orange red purple blue green cyan gray;
 $color_list: #f8df70 #f97d1c #de1c31 #813c85 #2775b6 #45b787 #1a94bc #bbb5ac;
-$color_list_deep: #fecc11f8df70 #f86b1d #f43e06 #7e1671 #0f59a4 #2c9678 #1772b4 #867e76;
+$color_list_deep: #fecc11 #f86b1d #f43e06 #7e1671 #0f59a4 #2c9678 #1772b4 #867e76;
 @each $name in $color_name {
   $i: index($color_name, $name);
   .ym-btn-#{$name} {
@@ -496,7 +496,10 @@ $color_list_deep: #fecc11f8df70 #f86b1d #f43e06 #7e1671 #0f59a4 #2c9678 #1772b4 
     left: 0;
     top: 0;
   }
-  &:hover .ym-carousel-point {
+  .ym-carousel-point.hover-hide {
+    display: none;
+  }
+  &:hover .ym-carousel-point.hover-hide {
     display: flex;
   }
   .ym-carousel-point {
@@ -505,7 +508,7 @@ $color_list_deep: #fecc11f8df70 #f86b1d #f43e06 #7e1671 #0f59a4 #2c9678 #1772b4 
     flex-direction: row;
     bottom: 20px;
     right: 20px;
-    display: none;
+    display: flex;
     li {
       width: 10px;
       height: 10px;
@@ -518,25 +521,29 @@ $color_list_deep: #fecc11f8df70 #f86b1d #f43e06 #7e1671 #0f59a4 #2c9678 #1772b4 
       }
     }
   }
-  &:hover .ym-carousel-btn {
+  .ym-carousel-btn.hover-hide {
+    display: none;
+  }
+  &:hover .ym-carousel-btn.hover-hide {
     display: block;
   }
   .ym-carousel-btn {
-    font-size: 150%;
+    font-size: 200%;
     position: absolute;
     z-index: 2;
-    width: 2em;
-    height: 2em;
+    width: 1.6em;
+    height: 1.6em;
     text-align: center;
-    line-height: 2em;
+    line-height: 1.6em;
     color: #ffffff;
     background-color: $basic_color;
     opacity: .7;
     top: 50%;
     border-radius: 1em;
-    margin-top: -1em;
+    margin-top: -.8em;
     cursor: pointer;
-    display: none;
+    display: block;
+    font-weight: bold;
     &:hover {
       opacity: 1;
     }
