--- a/src/pages/lodash.scss
+++ b/src/pages/lodash.scss
@@ -4,7 +4,7 @@
     display: none;
   }
   .one-level-menu {
-    font-size: 140%;
+    font-size: 130%;
     font-weight: 400;
     margin-top: 1.5em;
     cursor: pointer;
@@ -52,14 +52,6 @@
 .content-area {
   width: 800px;
   color: #555555;
-  code {
-    display: block;
-    background-color: #eee;
-    font-weight: 700;
-    padding: 1em;
-    color: #555;
-    border-radius: 0;
-  }
   blockquote {
     margin-bottom: 1.4em;
     margin-top: 1.4em;
@@ -74,7 +66,7 @@
   }
   pre {
     background-color: #283646;
-    color: #ddd;
+    color: #ffffff;
     padding: 1em;
     margin-top: 1.4em;
     border-radius: 0;
